# ticketing-cli

./: README.md  pyproject.toml
tests/: test_core.py
ticketing_cli/: __init__.py  cli.py  display.py  exporter.py  models.py  storage.py
