[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ticketing-cli"
version = "1.0.0"
description = "Command-line ticketing system with priority queues, status tracking, and JSON/CSV export"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["cli", "ticketing", "task-management", "priority-queue", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
tkt = "ticketing_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["ticketing_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
